--- a/identity-server/Properties/launchSettings.json
+++ b/identity-server/Properties/launchSettings.json
@@ -26,7 +26,9 @@
         "Rosered__Pass": "pass",
         "Maruko__User": "mar",
         "Maruko__Pass": "pass",
-        "Identity__Key": "1234"
+        "Identity__Key": "1234",
+        "Api__Secret": "secret",
+        "Mvc__Secret": "secret"
       }
     }
   }
