create api for create new user

--- a/identity-server/Properties/launchSettings.json
+++ b/identity-server/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "identity_server": {
+    "IdentityServer": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
